[gd_scene load_steps=4 format=3 uid="uid://dtmul6hciwimt"]

[ext_resource type="Script" uid="uid://dmylkkx84byyk" path="res://scripts/game_over_screen.gd" id="1_iwahs"]
[ext_resource type="Texture2D" uid="uid://cdsp66eic5fvl" path="res://assets/retro-1548260_1280.png" id="2_61w2s"]
[ext_resource type="PackedScene" uid="uid://bdwik3mt2r13j" path="res://scenes/defaultEnvironment.tscn" id="3_jw6e5"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 3
script = ExtResource("1_iwahs")

[node name="Retro-15482601280" type="Sprite2D" parent="."]
position = Vector2(640, 536)
texture = ExtResource("2_61w2s")

[node name="Retro-15482601281" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.234)
position = Vector2(640, 144)
rotation = -3.14159
texture = ExtResource("2_61w2s")

[node name="GameOverLabel" type="Label" parent="."]
self_modulate = Color(1.2, 1.2, 1.1, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -174.0
offset_right = 153.0
offset_bottom = -110.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 46
text = "Game Over :("

[node name="HighScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = 8.0
offset_right = 131.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 31
text = "New High Score! "
horizontal_alignment = 1

[node name="MainMenu" type="Button" parent="."]
layout_mode = 0
offset_left = 576.0
offset_top = 456.0
offset_right = 715.0
offset_bottom = 498.0
theme_override_font_sizes/font_size = 24
text = "Main Menu
"

[node name="Play Again" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = 160.0
offset_right = 67.0
offset_bottom = 202.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Try Again?"

[node name="Default" parent="." instance=ExtResource("3_jw6e5")]

[connection signal="pressed" from="MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Play Again" to="." method="_on_play_again_pressed"]
